// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Card Card component CardBody should allow scrolling content with the scrollable prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="style-body style-padding-medium components-card__body components-card-body"
+     class="style-scrollable style-scroll-y components-scrollable style-body style-padding-medium style-is-scrollable components-card__body components-card-body"
      data-wp-c16t="true"
      data-wp-component="CardBody"
    >
      Body
    </div>
`;

exports[`Card Card component CardBody should render with a darker background color when isShady is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="style-body style-padding-medium components-card__body components-card-body"
+     class="style-body style-padding-medium style-is-shady components-card__body components-card-body"
      data-wp-c16t="true"
      data-wp-component="CardBody"
    >
      Body
    </div>
`;

exports[`Card Card component CardFooter should render with a darker background color when isShady is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-medium components-card__footer components-card-footer"
+     class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-medium style-is-shady components-card__footer components-card-footer"
      data-wp-c16t="true"
      data-wp-component="CardFooter"
      style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
    >
      Footer
`;

exports[`Card Card component CardFooter should use the justify prop to align its content, like a Flex container 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div>
    <div
      class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-medium components-card__footer components-card-footer"
      data-wp-c16t="true"
      data-wp-component="CardFooter"
-     style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
+     style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: flex-end;"
    >
      Footer
    </div>
  </div>
`;

exports[`Card Card component CardHeader should render with a darker background color when isShady is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-medium components-card__header components-card-header"
+     class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-medium style-is-shady components-card__header components-card-header"
      data-wp-c16t="true"
      data-wp-component="CardHeader"
      style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
    >
      Header
`;

exports[`Card Card component should add different amounts of white space when using the size prop 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,19 +6,19 @@
    >
      <div
        class="style-content"
      >
        <div
-         class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-medium components-card__header components-card-header"
+         class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-large components-card__header components-card-header"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
        >
          Header
        </div>
        <div
-         class="style-body style-padding-medium components-card__body components-card-body"
+         class="style-body style-padding-large components-card__body components-card-body"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          Code is Poetry
        </div>
`;

exports[`Card Card component should get the isBorderless and isSize props (passed from its context) overriddenwhen the same props is specified directly on the component 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,26 +6,26 @@
    >
      <div
        class="style-content"
      >
        <div
-         class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-large style-section-borderless components-card__header components-card-header"
+         class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-small components-card__header components-card-header"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
        >
          Header
        </div>
        <div
-         class="style-body style-padding-large components-card__body components-card-body"
+         class="style-body style-padding-medium components-card__body components-card-body"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          Body
        </div>
        <div
-         class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-large style-section-borderless components-card__footer components-card-footer"
+         class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-x-small components-card__footer components-card-footer"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
        >
          Footer
`;

exports[`Card Card component should pass the isBorderless and isSize props from its context to its sub-components 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,31 +1,31 @@
  <div>
    <div
-     class="style-surface components-surface style-card style-card-borderless style-is-rounded components-card"
+     class="style-surface components-surface style-card style-is-rounded components-card"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="style-content"
      >
        <div
-         class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-large style-section-borderless components-card__header components-card-header"
+         class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-small components-card__header components-card-header"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
        >
          Header
        </div>
        <div
-         class="style-body style-padding-large components-card__body components-card-body"
+         class="style-body style-padding-small components-card__body components-card-body"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          Body
        </div>
        <div
-         class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-large style-section-borderless components-card__footer components-card-footer"
+         class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-small components-card__footer components-card-footer"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
          style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
        >
          Footer
`;

exports[`Card Card component should render correctly 1`] = `
<div>
  <div
    class="style-surface components-surface style-card style-is-rounded components-card"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="style-content"
    >
      <div
        class="style-flex style-items-row style-expanded-row components-flex style-header style-padding-medium components-card__header components-card-header"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
        style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
      >
        Card Header
      </div>
      <div
        class="style-body style-padding-medium components-card__body components-card-body"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Card Body 1
      </div>
      <div
        class="style-body style-padding-medium components-card__body components-card-body"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Card Body 2
      </div>
      <hr
        aria-orientation="horizontal"
        class="style-divider components-divider style-divider components-card__divider components-card-divider"
        data-wp-c16t="true"
        data-wp-component="CardDivider"
        role="separator"
      />
      <div
        class="style-body style-padding-medium components-card__body components-card-body"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Card Body 3
      </div>
      <div
        class="style-media components-card__media components-card-media"
        data-wp-c16t="true"
        data-wp-component="CardMedia"
      >
        <img
          alt="Card Media"
          src="https://images.unsplash.com/photo-1566125882500-87e10f726cdc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1867&q=80"
        />
      </div>
      <div
        class="style-flex style-items-row style-expanded-row components-flex style-footer style-padding-medium components-card__footer components-card-footer"
        data-wp-c16t="true"
        data-wp-component="CardFooter"
        style="--wp-components-flex-align: center; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: space-between;"
      >
        Card Footer
      </div>
    </div>
    <div
      aria-hidden="true"
      class="style-elevation style-has-shadow style-border-radius-inherit components-elevation"
      data-wp-c16t="true"
      data-wp-component="Elevation"
      style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 0px 0px 0
	rgba(0, 0, 0, 0);"
    />
    <div
      aria-hidden="true"
      class="style-elevation style-has-shadow style-border-radius-inherit components-elevation"
      data-wp-c16t="true"
      data-wp-component="Elevation"
      style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 0px 0px 0
	rgba(0, 0, 0, 0);"
    />
  </div>
</div>
`;

exports[`Card Card component should show a box shadow when the elevation prop is greater than 0 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -12,18 +12,18 @@
      <div
        aria-hidden="true"
        class="style-elevation style-has-shadow style-border-radius-inherit components-elevation"
        data-wp-c16t="true"
        data-wp-component="Elevation"
-       style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 1px 2px 0
- 	rgba(0, 0, 0, 0.05);"
+       style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 0px 0px 0
+ 	rgba(0, 0, 0, 0);"
      />
      <div
        aria-hidden="true"
        class="style-elevation style-has-shadow style-border-radius-inherit components-elevation"
        data-wp-c16t="true"
        data-wp-component="Elevation"
-       style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 2px 4px 0
- 	rgba(0, 0, 0, 0.1);"
+       style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 0px 0px 0
+ 	rgba(0, 0, 0, 0);"
      />
    </div>
  </div>
`;

exports[`Card Card component should support the legacy extraSmall value for the size prop as an alias for the xSmall value 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Card Card component should warn when the isElevated prop is passed 1`] = `
<div>
  <div
    class="style-surface components-surface style-card style-is-rounded components-card"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="style-content"
    >
      Code is Poetry
    </div>
    <div
      aria-hidden="true"
      class="style-elevation style-has-shadow style-border-radius-inherit components-elevation"
      data-wp-c16t="true"
      data-wp-component="Elevation"
      style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 1px 2px 0
	rgba(0, 0, 0, 0.05);"
    />
    <div
      aria-hidden="true"
      class="style-elevation style-has-shadow style-border-radius-inherit components-elevation"
      data-wp-c16t="true"
      data-wp-component="Elevation"
      style="--wp-components-elevation-offset: 0px; --wp-components-elevation-shadow: 0 2px 4px 0
	rgba(0, 0, 0, 0.1);"
    />
  </div>
</div>
`;
